# Pysenior-AI-Assistent

./: .gitignore  COMPLETE_TESTING_GUIDE.md  LICENSE  README.md  USAGE_GUIDE.md  pyproject.toml
backend/: .env.example  config.py  requirements.txt  test_llm_integration.py
backend/app/: config.py  main.py  test_llm_integration.py
backend/app/models/: __init__.py  pr_models.py  review_models.py  score_models.py
backend/app/routes/: ai_review.py  github_webhook.py  health.py
backend/app/services/: __init__.py  ai_review.py  code_parser.py  github_service.py  notification.py  scoring.py
backend/tests/: conftest.py  test_ai_review.py  test_code_parser.py  test_github_service.py  test_notification.py  test_pr_models.py  test_review_models.py  test_score_models.py  test_scoring.py  test_webhook.py
docs/: api_spec.md  architecture.md  data_flow.md
