[project]
name = "pysenior-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "app>=0.0.1",
    "app-config>=2.1.1",
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]
