[project]
name = "pysenior-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "app>=0.0.1",
    "app-config>=2.1.1",
    "ipykernel>=7.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pygithub>=2.8.1",
    "openai>=2.24.0",
    "anthropic>=0.84.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
